# Core/Contracts/Enums/ErrorType.cs
@@ -17,6 +17,7 @@
         MOVIMIENTO_NO_EXISTE,
         CUENTA_NO_EXISTE,
         SALDO_EXCEDIDO,
-        CUENTA_CON_MOVIMIENTOS
+        CUENTA_CON_MOVIMIENTOS,
+        SIN_MOVIMIENTOS
     }
 }
